# matte

./: .gitignore  .pylintrc  Makefile  README.md  __init__.py  data_path.py  pyproject.toml
.github/workflows/: action.yaml
src/: __init__.py  run.py  train_base.py  train_gan.py  train_refine.py
src/model/: __init__.py  decoder.py  model.py  networks.py  refiner.py  resnet.py
src/utils/: __init__.py  augmentation.py  generator.py  train_utils.py
